fix(image): backports image generation fixes - ref: #36209